Fix paragraph alignment

--- a/styles.scss
+++ b/styles.scss
@@ -76,6 +76,7 @@
             display: flex;
             align-self: center;
             align-items: center;
+            flex-wrap: wrap;
             margin-top: .4rem;
             p {
                 margin-bottom: .3rem;
